more gauntlet updates

--- a/Themes/new/Styles/_typography.less
+++ b/Themes/new/Styles/_typography.less
@@ -258,6 +258,10 @@ a {
   text-decoration: none;
 }
 
+.text-transform-none {
+  text-transform: none !important;
+}
+
 .whitespace-nowrap {
   white-space: nowrap;
 }
