--- a/Themes/new/Styles/gauntlet.css
+++ b/Themes/new/Styles/gauntlet.css
@@ -6,6 +6,7 @@
 */
 html {
   scroll-behavior: smooth;
+  scroll-padding-top: 79px;
 }
 .bg-fuscia {
   background-color: #e854be;
@@ -29,7 +30,7 @@ html {
   background-color: #ffc240;
 }
 .bg-purple {
-  background-color: #6941e4;
+  background-color: #5c34d5;
 }
 .bg-sky {
   background-color: #acdde5;
@@ -68,7 +69,7 @@ html {
   color: #ffc240;
 }
 .text-purple {
-  color: #7b57e7;
+  color: #6d49d9;
 }
 .text-sky {
   color: #acdde5;
@@ -107,7 +108,7 @@ html {
   fill: #ffc240;
 }
 .fill-purple {
-  fill: #7b57e7;
+  fill: #6d49d9;
 }
 .fill-sky {
   fill: #acdde5;
@@ -134,6 +135,19 @@ html {
 .o-97 {
   opacity: 0.97;
 }
+.h-max {
+  height: max-content;
+}
+.position-sticky {
+  position: -webkit-sticky;
+  position: sticky;
+}
+[data-toggle="collapse"] i {
+  transition: all 0.3s ease-in-out;
+}
+.collapse {
+  overflow: hidden;
+}
 .btn {
   text-transform: uppercase;
   font-weight: 700;
@@ -149,13 +163,13 @@ html {
   background-color: #d03e0e !important;
 }
 .btn-secondary {
-  background-color: #7b57e7;
+  background-color: #6d49d9;
   color: #ffffff;
 }
 .btn-secondary:hover,
 .btn-secondary:active,
 .btn-secondary:focus {
-  background-color: #4b1ed3 !important;
+  background-color: #4825b1 !important;
 }
 .btn-blue {
   background-color: #215cd7;
@@ -275,6 +289,9 @@ h6,
   text-transform: uppercase;
 }
 @media (min-width: 992px) {
+  html {
+    scroll-padding-top: 91px;
+  }
   .h-lg-100 {
     height: 100%;
   }
