--- a/Themes/new/Styles/gauntlet.css
+++ b/Themes/new/Styles/gauntlet.css
@@ -317,6 +317,11 @@ a.text-blue:hover {
   html {
     scroll-padding-top: 91px;
   }
+  #navigation.collapse {
+    display: block;
+    height: auto !important;
+    overflow: visible;
+  }
   .h-lg-100 {
     height: 100%;
   }
