--- a/Themes/new/Styles/gauntlet.less
+++ b/Themes/new/Styles/gauntlet.less
@@ -293,6 +293,12 @@ a.text-blue:hover { color: @color-blue; }
     scroll-padding-top: 91px; 
   }
 
+  #navigation.collapse {
+    display: block;
+    height: auto !important;
+    overflow: visible;
+  }
+
   .h-lg-100 {
     height: 100%;
   }
