--- a/Themes/new/Styles/utilities/_positioning.less
+++ b/Themes/new/Styles/utilities/_positioning.less
@@ -18,6 +18,12 @@
 }
 
 .positioning-breakpoints(@infix) {
+
+  .position@{infix}-sticky {
+    position: -webkit-sticky;
+    position: sticky;
+  }
+
   .ltr@{infix} {
     direction: ltr;
   }
