--- a/Themes/new/Styles/utilities/_sizing.less
+++ b/Themes/new/Styles/utilities/_sizing.less
@@ -53,7 +53,7 @@
   .max-w@{infix}-75 {
     max-width: 75% !important;
   }
-  .max-w@{infix}-100 {
+  .max-w@{infix}-100, .max-w@{infix}-full {
     max-width: 100% !important;
   }
 
