--- a/Themes/new/Styles/gauntlet.less
+++ b/Themes/new/Styles/gauntlet.less
@@ -23,6 +23,10 @@
 @color-orange: #f05421;
 @color-lime: #b9d956;
 
+@color-teal: #0fa4b7;
+@color-brown: #7a2e20;
+@color-lilac: #c3c3fc;
+
 //
 //
 // OVERRIDES
@@ -58,6 +62,9 @@ html {
 .bg-pink { background-color: @color-pink; }
 .bg-orange { background-color: @color-orange; }
 .bg-lime { background-color: @color-lime; }
+.bg-teal { background-color: @color-teal; }
+.bg-brown { background-color: @color-brown; }
+.bg-lilac { background-color: @color-lilac; }
 
 .text-fuscia { color: @color-fuscia; }
 .text-blue { color: @color-blue; }
@@ -72,6 +79,9 @@ html {
 .text-pink { color: @color-pink; }
 .text-orange { color: @color-orange; }
 .text-lime { color: @color-lime; }
+.text-teal { color: @color-teal; }
+.text-brown { color: @color-brown; }
+.text-lilac { color: @color-lilac; }
 
 .fill-fuscia { fill: @color-fuscia; }
 .fill-blue { fill: @color-blue; }
@@ -86,6 +96,9 @@ html {
 .fill-pink { fill: @color-pink; }
 .fill-orange { fill: @color-orange; }
 .fill-lime { fill: @color-lime; }
+.fill-teal { fill: @color-teal; }
+.fill-brown { fill: @color-brown; }
+.fill-lilac { fill: @color-lilac; }
 
 .h-0 { height: 0; }
 .svh-100 {
@@ -94,15 +107,6 @@ html {
 
 .o-97 {
   opacity: .97;
-}
-
-.h-max {
-  height: max-content;
-}
-
-.position-sticky {
-  position: -webkit-sticky;
-  position: sticky;
 }
 
 [data-toggle="collapse"] i {
@@ -288,9 +292,17 @@ a.text-blue:hover { color: @color-blue; }
 .display-2 {
   font-size: ceil(@font-size-display-2*.9);
 }
+.display-3 {
+  font-size: ceil(@font-size-display-3*.95);
+}
 
 #navigation a {
   font-size: 125%;
+}
+
+small {
+  font-size: 80%;
+  line-height: 1.3;
 }
 
 [data-toggle='collapse'] i {
@@ -334,6 +346,10 @@ a.text-blue:hover { color: @color-blue; }
 @media @lg {
   html {
     scroll-padding-top: 91px; 
+  }
+
+  .display-3 {
+    font-size: ceil(@font-size-display-3*1.55);
   }
 
   #gauntlet-wordmark {
