--- a/Themes/new/Styles/gauntlet.css
+++ b/Themes/new/Styles/gauntlet.css
@@ -352,10 +352,19 @@ small {
   left: -5%;
   max-width: 100%;
 }
+#cutout_4 {
+  width: 100%;
+  margin: 40px auto;
+  transform: scale(1.3);
+}
 @media (min-width: 576px) {
   #cutout_2 {
     top: 0;
     right: -63%;
+  }
+  #cutout_4 {
+    transform: scale(1.5);
+    margin: 80px auto;
   }
 }
 @media (min-width: 768px) {
@@ -390,6 +399,18 @@ small {
   }
   #cutout_2 {
     top: -5%;
+  }
+  #cutout_5 {
+    position: absolute;
+    top: 7%;
+    right: -3%;
+    width: 26%;
+  }
+  #cutout_6 {
+    position: absolute;
+    top: 8%;
+    left: -5%;
+    width: 21%;
   }
   #navigation.collapse {
     display: block;
