--- a/Themes/new/Styles/gauntlet.less
+++ b/Themes/new/Styles/gauntlet.less
@@ -328,10 +328,20 @@ small {
   max-width: 100%;
 }
 
+#cutout_4 {
+  width: 100%;
+  margin: 40px auto;
+  transform: scale(1.3);
+}
+
 @media @sm {
   #cutout_2 {
     top: 0;
     right: -63%;
+  }
+  #cutout_4 {
+    transform: scale(1.5);
+    margin: 80px auto;
   }
 }
 
@@ -375,6 +385,20 @@ small {
 
   #cutout_2 {
     top: -5%;
+  }
+
+  #cutout_5 {
+    position: absolute;
+    top: 7%;
+    right: -3%;
+    width: 26%;
+  }
+
+  #cutout_6 {
+    position: absolute;
+    top: 8%;
+    left: -5%;
+    width: 21%;
   }
 
   #navigation.collapse {
