--- a/Themes/new/Styles/gauntlet.css
+++ b/Themes/new/Styles/gauntlet.css
@@ -326,12 +326,18 @@ a.text-blue:hover {
 .display-3 {
   font-size: 46px;
 }
-#navigation a {
+#gauntlet-nav a {
   font-size: 125%;
 }
 small {
   font-size: 80%;
   line-height: 1.3;
+}
+#faq_accordion a,
+#faq_accordion a:focus,
+#faq_accordion a:active,
+#faq_accordion a:visited {
+  color: #f05421;
 }
 [data-toggle='collapse'] i {
   margin-top: -7px;
@@ -375,7 +381,7 @@ small {
     right: -30%;
     width: 70%;
   }
-  #navigation a {
+  #gauntlet-nav a {
     font-size: 100%;
   }
   .display-1 {
@@ -412,7 +418,7 @@ small {
     left: -5%;
     width: 21%;
   }
-  #navigation.collapse {
+  #gauntlet-nav.collapse {
     display: block;
     height: auto !important;
     overflow: visible;
