--- a/Themes/new/Styles/gauntlet.less
+++ b/Themes/new/Styles/gauntlet.less
@@ -296,13 +296,20 @@ a.text-blue:hover { color: @color-blue; }
   font-size: ceil(@font-size-display-3*.95);
 }
 
-#navigation a {
+#gauntlet-nav a {
   font-size: 125%;
 }
 
 small {
   font-size: 80%;
   line-height: 1.3;
+}
+
+#faq_accordion a,
+#faq_accordion a:focus,
+#faq_accordion a:active,
+#faq_accordion a:visited {
+  color: @color-orange;
 }
 
 [data-toggle='collapse'] i {
@@ -355,7 +362,7 @@ small {
     width: 70%;
   }
 
-  #navigation a {
+  #gauntlet-nav a {
     font-size: 100%;
   }
 
@@ -401,7 +408,7 @@ small {
     width: 21%;
   }
 
-  #navigation.collapse {
+  #gauntlet-nav.collapse {
     display: block;
     height: auto !important;
     overflow: visible;
